@@ -1,19 +1,0 @@
-#!/bin/sh
-
-sudo apt-get install -y \
-    autoconf \
-    bison \
-    cmake \
-    gcc \
-    libmodule-scandeps-perl \
-    libnauty2-dev \
-    libparse-yapp-perl \
-    libtool \
-    make \
-    moreutils \
-    perl \
-    python-dev \
-    python-setuptools \
-    python3-dev \
-    python3-setuptools \
-    swig
