@@ -1,5 +1,0 @@
-#!/bin/sh
-
-$(dirname $0)/build.sh
-$(dirname $0)/run.sh
-$(dirname $0)/test.sh
