@@ -8,6 +8,8 @@ cod-tools (unreleased)
     - COD::CIF::Data:
         - updated the get_space_group_number() subroutine to ignore
           CIF special values.
+  * Removed:
+    - dependency installer for Debian 9.
 
 cod-tools (3.6.0)
 
